--- a/weatherapp/src/styles/App.scss
+++ b/weatherapp/src/styles/App.scss
@@ -1,9 +1,19 @@
-$card-color:#003d9ec0; 
-$toggle-height: 20px;
+@import 'config';
 
 * {
     scroll-behavior: smooth;
 }
+
+body {
+    background-image: url('../../static/images/sara-the-freak-A4UojtraSrw-unsplash.jpg');
+    background-size: 1920px 1080px;
+    background-attachment: fixed;
+}
+
+p {
+    margin: 0;
+}
+
 ::-webkit-scrollbar {
     width: 5px;
 }
@@ -14,127 +24,35 @@ $toggle-height: 20px;
 
 ::-webkit-scrollbar-thumb:horizontal {
     background: #888;
+    border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover:horizontal {
     background: #555
 }
 
-body {
-    background-color: #000c50;
-}
-
 .top {
     height: 100vh;
 }
 
-.degree-toggle {
-    position: absolute;
-    top: 5%;
-    right:5%;
-    color: #fff;
-    z-index: 1;
+.hourly {
+    height: 100vh;
 }
 
-.toggle {
+.daily {
+    height: 100vh;
+}
+
+.chart {
     position: relative;
-    display: inline-block;
-    width: 40px;
-    height: 24px;
-    margin: 0 5px 0 5px;
-
-    input {
-        opacity: 0;
-        width: 0;
-        height: 0;
-    }
+    height: 10vh;
+    width: 80%;
+    left: 10%;
+    right: 10%;
 }
 
-.toggle-button {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #555;
-    -webkit-transition: .4s;
-    transition: .4s;
-    border-radius: 20px;
+@import 'toggle';
+@import 'dropdown';
+@import 'weather';
+@import 'layout';
 
-    &:before {
-        position: absolute;
-        content: "";
-        height: 20px;
-        width: 20px;
-        left: 2px;
-        bottom: 2px;
-        border-radius: 50%;
-        background-color: #ccc;
-        -webkit-transition: .4s;
-        transition: .4s;
-    }
-}
-
-input:checked + .toggle-button:before {
-    -webkit-transform: translateX(16px);
-    -ms-transform: translateX(16px);
-    transform: translateX(16px);
-}
-
-.weather-now {
-    margin: 10% 40% 20% 40%;
-    text-align: center;
-    color: #fff;
-    scroll-snap-align: start;
-    height: 100vh;
-}
-
-.main-weather {
-    font-size: 20px;
-    margin-top: 0;
-}
-
-.temp-now {
-    font-size: 50px ;
-    margin: 0;
-}
-
-.current {
-    font-style: italic;
-    opacity: 0.8;
-}
-
-.forecast {
-    height: 100vh;
-}
-
-.weather-list {
-    margin-left: 10%;
-    margin-right: 10%;
-    color: #fff;
-    margin: 0 10% 5% 10%;
-
-    &.hourly {
-        display: grid;
-        grid-template-columns: repeat(48, 1fr);
-        grid-template-columns: repeat(48, 1fr);
-        overflow-x:auto;
-    }
-
-    &.daily {
-        display: grid;
-        grid-template-columns: repeat(8, 1fr);
-        overflow-x:auto;
-    }
-}
-.weather-card {
-    margin: 10px;
-    border-radius: 15px;
-    border: 0px;
-    background-color: $card-color;
-    width: 130px;
-    height: 150px;
-    padding: 20px;
-    text-align: center;
-}
