Chart: added line chart for hourly view

--- a/weatherapp/src/styles/_dropdown.scss
+++ b/weatherapp/src/styles/_dropdown.scss
@@ -16,6 +16,7 @@ $dropdown_height: 30px;
     padding: 5px;
     left: 5px;
     color: #fff;
+    margin: 10px;
     
     &_toggler {
         float: right;
