--- a/weatherapp/src/styles/_weather.scss
+++ b/weatherapp/src/styles/_weather.scss
@@ -21,15 +21,18 @@
     opacity: 0.8;
 }
 
+
+
 .weather-list {
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 8%;
+    margin-right: 8%;
     color: #fff;
     margin: 0 10% 5% 10%;
+    column-gap: 50px;
 
     &.hourly {
         display: grid;
-        grid-template-columns: repeat(48, 1fr);
+        grid-template-columns: repeat(48, 10%);
         overflow-x:auto;
         height: 180px;
     }
@@ -43,11 +46,10 @@
 }
 
 .weather-card {
-    margin: 10px;
     border-radius: 15px;
     border: 0px;
     background-color: $card-color;
-    width: 130px;
+    width: 100%;
     height: 100px;
     padding: 20px;
     text-align: center;
